# python_homework2

./: .flake8  Makefile  README.md  conftest.py  homework.py  models.py  my_dream.txt  poetry.toml  pyproject.toml
.github/workflows/: test-study.yaml  testing-with-poetry.yaml
tests/: test_book.py
